# BukshikTimeTheLoop

./: .gitignore  BukshikGame.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  settings.json
headers/: params.hpp
src/: BukshikGame.cpp  Game.hpp  Menu.hpp  State.hpp  StateSettings.hpp  allHeaders.hpp  game.hpp  player.hpp  settings.hpp  state.hpp
src/headers/: main.cpp
src/include/: Block.cpp  Block.hpp  Game.cpp  Game.hpp  Menu.cpp  Menu.hpp  Settings.hpp  State.cpp  State.hpp  StateSettings.hpp  allHeaders.hpp
www/: index.html
